[workspace]
members = [".", "codegen"]

[package]
name = "rakrs"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/rakrs.git"
homepage = "https://github.com/SOF3/rakrs"

[dependencies]
bitflags = "1.1"
byteorder = "1.3"
derive-new = "0.5.8"
derive_more = "0.15.0"
getset = "0.0.7"
rakrs-codegen = {path = "codegen", version = "0.1.0"}
