[workspace]
members = [".", "codegen", "io", "protocol"]

[package]
name = "rakrs"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/rakrs.git"
homepage = "https://github.com/SOF3/rakrs"

[dependencies]
derive-new = "0.5.8"
derive_more = "0.15.0"
getset = "0.0.9"
rakrs-io = {path = "io", version = "0.1.0"}
rakrs-protocol = {path = "protocol", version = "0.1.0"}
tokio = "0.2.0-alpha.4"
