[workspace]
members = [".", "codegen", "io", "protocol", "testkit"]

[package]
name = "rakrs"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/rakrs.git"
homepage = "https://github.com/SOF3/rakrs"

[dependencies]
derive-new = "0.5.8"
derive_more = "0.99.1"
getset = "0.1.0"
log = "0.4.8"
rakrs-io = {path = "io", version = "0.1.0"}
rakrs-protocol = {path = "protocol", version = "0.1.0"}
tokio = {version = "0.2.1", features = ["udp"]}
