[package]
name = "rakrs-protocol"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/rakrs.git"
homepage = "https://github.com/SOF3/rakrs"

[dependencies]
bitflags = "1.1"
byteorder = "1.3"
derive_more = "0.99.1"
rakrs-codegen = {path = "../codegen", version = "0.1.0"}
rakrs-io = {path = "../io", version = "0.1.0"}
